# virtual project for a dev-environment, usable via:
# uv venv
# uv pip install .
[project]
name = "Trampolinturnen"
version = "0.8.15"
description = "Einführung ins Trampolinturnen"
readme = "README.md"

dependencies = [
    "sphinx>=7",
    "sphinxawesome-theme",
    "sphinx-sitemap",
    "myst-parser",
    # "sphinx-design",
    "rstdoc",
    # dev
    "prek",
    "bump2version",
]
requires-python = ">=3.12"

[tool.uv]
package = false
